Use HttpClient API and faster JSON lib